--- a/.github/workflows/test01.yml
+++ b/.github/workflows/test01.yml
@@ -34,9 +34,20 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-
-      - uses: theowenyoung/folder-hash@v2.0.1
+      
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
+      
+      - name: get hashes for .github folders
+        uses: theowenyoung/folder-hash@dbee806babae73233242b3b50270e96ad1b46fd7 #v2.0.1
+        id: hashes
         with:
           path: |
             .github/workflows
             .github/classroom
+
+      - run echo hashes ${{steps.hashes.outputs}}
