--- a/.github/workflows/test01.yml
+++ b/.github/workflows/test01.yml
@@ -39,7 +39,7 @@ jobs:
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
       - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}
+          ls -l -R ${{ github.workspace }}
       - run: echo "🍏 This job's status is ${{ job.status }}."
       
       - name: get hashes for .github folders
@@ -50,4 +50,4 @@ jobs:
             .github/workflows
             .github/classroom
 
-      - run: echo hashes ${{steps.hashes.outputs}}
+      - run: echo hashes ${{steps.hashes.outputs.hash}}
