--- a/.github/workflows/test01.yml
+++ b/.github/workflows/test01.yml
@@ -51,3 +51,14 @@ jobs:
             .github/classroom
 
       - run: echo hashes ${{steps.hashes.outputs.hash}}
+      
+      - name: Make Request
+        id: myRequest
+        uses: fjogeleit/http-request-action@master
+        with:
+          url: "https://sav-mik-autograding.azurewebsites.net/api/Autograding"
+          customHeaders: '{"x-functions-key": "${{ secrets.AUTOGRADING_API_KEY }}"}'
+          data: '{"user": "${{github.repository_owner}}","points": 2,"hashes": "${{steps.hashes.outputs.hash}}","repo": "${{github.repository}}","commit": "${{github.sha}}","task": "10","actor": "${{github.actor}}"}'
+      - name: Show Response
+        run: echo ${{ steps.myRequest.outputs.response }}
+
