--- a/.github/workflows/test01.yml
+++ b/.github/workflows/test01.yml
@@ -51,14 +51,22 @@ jobs:
             .github/classroom
 
       - run: echo hashes ${{steps.hashes.outputs.hash}}
-      
+
+      # add id to action so outputs can be used
+      - name: Autograding
+        uses: mikkopa/autograding@v1
+        id: autograder
+        continue-on-error: true
+
       - name: Make Request
         id: myRequest
-        uses: fjogeleit/http-request-action@master
+        uses: fjogeleit/http-request-action@8e939c608aea2d5df19da3e8229cf035f7aa9e4c #master
         with:
           url: "https://sav-mik-autograding.azurewebsites.net/api/Autograding"
           customHeaders: '{"x-functions-key": "${{ secrets.AUTOGRADING_API_KEY }}"}'
-          data: '{"user": "${{github.repository_owner}}","points": 2,"hashes": "${{steps.hashes.outputs.hash}}","repo": "${{github.repository}}","commit": "${{github.sha}}","task": "10","actor": "${{github.actor}}"}'
+          data: '{"user": "${{github.repository_owner}}","points": "${{steps.autograder.outputs.Points}}","hashes": "${{steps.hashes.outputs.hash}}","repo": "${{github.repository}}","commit": "${{github.sha}}","task": "10","actor": "${{github.actor}}"}'
       - name: Show Response
         run: echo ${{ steps.myRequest.outputs.response }}
 
+    outputs:
+      grading-score: ${{ steps.autograder.outputs.Points }}
